Bug 1428076 - Fix bad JSON format when profiling workers that do nothing r=mstange

When the Gecko Profiler runs, we keep samples and markers for threads in
some occasions (eg when a Worker ends). But we fail to account for the
case where these threads have output no sample and no marker yet.

MozReview-Commit-ID: 2IEghD0v5Qd