tools/profiler/core/ProfileBufferEntry.cpp
@@ -703,7 +703,8 @@ private:
 //     DynamicStringFragment("dle.js:2")
 //     DynamicStringFragment("5)")
 //
-void
+// This method returns true if it wrote anything to the writer.
+bool
 ProfileBuffer::StreamSamplesToJSON(SpliceableJSONWriter& aWriter, int aThreadId,
                                    double aSinceTime,
                                    double* aOutFirstSampleTime,
@@ -724,6 +725,7 @@ ProfileBuffer::StreamSamplesToJSON(SpliceableJSONWriter& aWriter, int aThreadId,
 
   EntryGetter e(*this);
   bool seenFirstSample = false;
+  bool haveSamples = false;
 
   for (;;) {
     // This block skips entries until we find the start of the next sample.
@@ -907,12 +909,15 @@ ProfileBuffer::StreamSamplesToJSON(SpliceableJSONWriter& aWriter, int aThreadId,
     }
 
     WriteSample(aWriter, sample);
+    haveSamples = true;
   }
 
+  return haveSamples;
   #undef ERROR_AND_CONTINUE
 }
 
-void
+// This method returns true if it wrote anything to the writer.
+bool
 ProfileBuffer::StreamMarkersToJSON(SpliceableJSONWriter& aWriter,
                                    int aThreadId,
                                    const TimeStamp& aProcessStartTime,
@@ -920,6 +925,7 @@ ProfileBuffer::StreamMarkersToJSON(SpliceableJSONWriter& aWriter,
                                    UniqueStacks& aUniqueStacks) const
 {
   EntryGetter e(*this);
+  bool haveMarkers = false;
 
   // Stream all markers whose threadId matches aThreadId. We skip other entries,
   // because we process them in StreamSamplesToJSON().
@@ -933,10 +939,13 @@ ProfileBuffer::StreamMarkersToJSON(SpliceableJSONWriter& aWriter,
       if (marker->GetTime() >= aSinceTime &&
           marker->GetThreadId() == aThreadId) {
         marker->StreamJSON(aWriter, aProcessStartTime, aUniqueStacks);
+        haveMarkers = true;
       }
     }
     e.Next();
   }
+
+  return haveMarkers;
 }
 
 static void
